Fix the issue of overflow in the project

--- a/style.css
+++ b/style.css
@@ -1276,7 +1276,7 @@ animation-duration: 1.5s;
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow-y:scroll;
     background-color: #979493;
     background-blend-mode: soft-light;
   }
